--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <p>Python <span class="percentage">80%</span></p>
+                            <p>Java (Basics) <span class="percentage">80%</span></p>
                             <div class="progress">
                                 <div class="progress-bar" style="width: 80%;"></div>
                             </div>
@@ -212,9 +212,9 @@
                     <p>Managing and collaborating on projects using Git and GitHub.</p>
                 </div>
                 <div class="service-box">
-                    <i class="fab fa-python"></i>
-                    <h3 class="service-title">Python Scripting</h3>
-                    <p>Writing automation scripts and backend logic using Python.</p>
+                    <i class="fab fa-java"></i>
+                    <h3 class="service-title">Java </h3>
+                    <p>Writing automation scripts and backend logic using Java.</p>
                 </div>
             </div>
 
@@ -389,7 +389,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="ui">
+                <!-- <div class="project-card" data-category="ui">
                     <div class="project-img">
                         <img src="img/project-plan-example-2.jpg" alt="Project 2">
                         <div class="project-overlay">
@@ -410,9 +410,9 @@
                             <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-behance"></i> Behance</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="project-card" data-category="web">
+                <!-- <div class="project-card" data-category="web">
                     <div class="project-img">
                         <img src="img/project-plan-example-2.jpg" alt="Project 3">
                         <div class="project-overlay">
@@ -433,7 +433,7 @@
                             <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="project-card" data-category="portfolio">
                     <div class="project-img">
@@ -454,7 +454,7 @@
                         <div class="project-links">
                             <a href="#" class="project-link demo-link-mine" data-has-source="false"><i class="fas fa-link"></i> Live Demo</a>
                             <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-github"></i> GitHub</a>
-                            <a href="https://santoshred8.github.io/portfolio/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i>Visit</a>
+                            <a href="https://santoshred8.github.io/MyPortfolio/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i>Visit</a>
                         </div>
                     </div>
                 </div>
@@ -570,7 +570,7 @@
                         <i class="fas fa-globe"></i>
                         <div class="contact-item-info">
                             <h3>Website</h3>
-                            <p>www.santoshred8.github.io/portfolio</p>
+                            <p>www.santoshred8.github.io/MyPortfolio</p>
                         </div>
                     </div>
 
@@ -612,7 +612,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <h2 class="logo">Santosh <span>Reddy</span></h2>
+            <h2 class="logo"> ---- Santosh Reddy</h2>
             <p>&copy; 2025 Mandati Santosh. All rights reserved.</p>
         </div>
     </footer>
