--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                             <input type="email" class="form-control" id="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" id="number" placeholder="Your Number" required>
+                            <input type="tel" class="form-control" id="number" name="number" placeholder="Your Number" required>
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" id="subject" placeholder="Your Subject" required>
