--- a/index.html
+++ b/index.html
@@ -587,19 +587,19 @@
                     <h3>SEND EMAIL HERE</h3>
                     <form id="contactForm">
                         <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
                             <input type="tel" class="form-control" id="number" name="number" placeholder="Your Number" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Your Subject" required>
+                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Your Subject" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" id="message" rows="5" placeholder="Your Message"
+                            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your Message"
                                 required></textarea>
                         </div>
                         <button type="submit" class="btn submit-btn">Send Message</button>
