--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h3>Personal Info</h3>
                         <div class="info-grid">
                             <p><strong>Date of Birth:</strong> 27th&nbsp;Feb 2005</p>
-                            <p><strong>Website:</strong> https://santoshred8.github.io/portfolio/</p>
+                            <p><strong>Website:</strong> <a href="https://santoshred8.github.io/MyPortfolio/" style="color: inherit; text-decoration: none;">https://santoshred8.github.io/MyPortfolio/</a></p>
                             <p><strong>Degree:</strong> B.Tech</p>
                             <p><strong>City:</strong> Khammam, Telangana</p>
                             <p><strong>Age:</strong> 20</p>
@@ -507,24 +507,30 @@
                                 <span>CSS</span>
                                 <span>JavaScript</span>
                             </div>
+                            <a style="margin-top: 10px;" href="https://github.com/SantoshRed8/CodSoft" class="project-link github-link" data-has-source="True"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
             
                 <div class="exp-timeline-item">
                     <div class="exp-timeline-content-wrapper">
-                        <div class="exp-timeline-date">2025</div>
+                        <div class="exp-timeline-date">MAY 2025 - JUNE 2025</div>
                         <div class="exp-timeline-dot"></div>
                         <div class="exp-timeline-connector"></div>
                         <div class="exp-timeline-content">
-                            <h3>Campus Tour Of DSU</h3>
+                            <h3>Virtual Campus Tour - DSU</h3>
                             <h4>Mini-project in College</h4>
-                            <p>During my graduation, I completed a project called 'Campus Tour' for my college. The project focused on creating an interactive and user-friendly platform to showcase the campus facilities, helping new students and visitors explore the college virtually.</p>
+                            <p>During my graduation, I completed a project called 'Virtual Campus Tour' for my college. The project focused on creating an interactive and user-friendly platform to showcase the campus facilities, helping new students and visitors explore the college virtually.</p>
                             <div class="exp-timeline-tech-tags">
                                 <span>HTML</span>
                                 <span>CSS</span>
                                 <span>JavaScript</span>
-                                <span>Java</span>
+                                <span>Three.js</span>
+                                <span>Panolens.js</span>
+                            </div>
+                            <div style="margin-top: 10px; display: flex; justify-content: space-evenly; gap: 5%;">
+                                <a href="https://github.com/SantoshRed8/Virtual-Campus-Tour---DSU" class="project-link github-link" data-has-source="true" style="width: 100%;"><i class="fab fa-github"></i> GitHub</a>
+                                <a href="https://santoshred8.github.io/Virtual-Campus-Tour---DSU/" class="project-link" target="_blank" style="width: 100%;" ><i class="fas fa-external-link-alt"></i>Visit</a>
                             </div>
                         </div>
                     </div>
@@ -570,14 +576,14 @@
                         <i class="fas fa-globe"></i>
                         <div class="contact-item-info">
                             <h3>Website</h3>
-                            <p>www.santoshred8.github.io/MyPortfolio</p>
+                            <p> <a href="https://santoshred8.github.io/MyPortfolio/" style="text-decoration: none; color: inherit;">santoshred8.github.io/MyPortfolio</a></p>
                         </div>
                     </div>
 
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/santosh-reddy-4680b1313?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in" ></i></a>
+                        <a href="https://www.linkedin.com/in/mandati-santosh" target="_blank"><i class="fab fa-linkedin-in" ></i></a>
                         <a href="https://github.com/SantoshRed8" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.instagram.com/santosh_mandati?igsh=MmtoMmIwMTBkemU5" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/the_mandati" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://api.whatsapp.com/send?phone=8522931487&text=" target="_blank"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100065941196994&mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
