--- a/index.html
+++ b/index.html
@@ -389,55 +389,125 @@
                     </div>
                 </div>
                 
-                <!-- <div class="project-card" data-category="ui">
+                <div class="project-card" data-category="web">
                     <div class="project-img">
-                        <img src="img/project-plan-example-2.jpg" alt="Project 2">
-                        <div class="project-overlay">
-                            <div class="project-category">UI/UX Design</div>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <h3 class="project-title">Finance App Interface</h3>
-                        <p class="project-desc">A modern banking application interface designed with user experience and
-                            accessibility in mind.</p>
-                        <div class="project-tech">
-                            <span>Figma</span>
-                            <span>Adobe XD</span>
-                            <span>Prototyping</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link demo-link-2"><i class="fas fa-link"></i> Case Study</a>
-                            <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-behance"></i> Behance</a>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- <div class="project-card" data-category="web">
-                    <div class="project-img">
-                        <img src="img/project-plan-example-2.jpg" alt="Project 3">
+                        <img src="img/project-University.png" alt="Project 2">
                         <div class="project-overlay">
                             <div class="project-category">Web Development</div>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3 class="project-title">Weather Dashboard</h3>
-                        <p class="project-desc">An interactive weather application with location-based forecasts and
-                            weather alerts.</p>
+                        <h3 class="project-title">University Website</h3>
+                        <p class="project-desc">Designed and deployed a dynamic university homepage with responsive UI, multi-page navigation, and interactive program sections.</p>
                         <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
                             <span>JavaScript</span>
-                            <span>Weather API</span>
-                            <span>CSS3</span>
+                            <span>ReactJS</span>
+                            <span>NodeJs</span>
+                            <span>Express</span>
+                            <span>Nodemailer</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link demo-link-3"><i class="fas fa-link"></i> Live Demo</a>
-                            <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="img/" class="project-link demo-link-2"><i class="fas fa-link"></i> Live Demo</a>
+                            <a href="https://github.com/SantoshRed8/University-BySantoshReddy" class="project-link github-link" data-has-source="true"><i class="fab fa-github"></i>
+                                GitHub</a>
+                            <a href="https://university-bysantoshreddy.netlify.app" class="project-link" target="_blank"><i
+                                    class="fas fa-external-link-alt"></i>Visit</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
+
+                <div class="project-card" data-category="web">
+                    <div class="project-img">
+                        <img src="img/project-expenses.png" alt="Project 3">
+                        <div class="project-overlay">
+                            <div class="project-category">Web Development</div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3 class="project-title">Expenses Tracker</h3>
+                        <p class="project-desc">Developed a full-stack expense tracker app (Money Mate) with clean UI and real-time data handling. Also Data Can be Exported in json file , CSV file & text file.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>ReactJS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="img/" class="project-link demo-link-3"><i class="fas fa-link"></i> Live Demo</a>
+                            <a href="https://github.com/SantoshRed8/Expenses-Tracker" class="project-link github-link"
+                                data-has-source="true"><i class="fab fa-github"></i>
+                                GitHub</a>
+                            <a href="https://expensestracker-bysantoshreddy.netlify.app/" class="project-link" target="_blank"><i
+                                    class="fas fa-external-link-alt"></i>Visit</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="web">
+                    <div class="project-img">
+                        <img src="img/project-Medibbok.png" alt="Project 4">
+                        <div class="project-overlay">
+                            <div class="project-category">Web Development</div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3 class="project-title">MediBook</h3>
+                        <p class="project-desc">Developed a full-stack Doctor E-Appointment System enabling users to book appointments, apply as doctors, and manage schedules with authentication and role-based access control.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>ReactJS</span>
+                            <span>NodeJS</span>
+                            <span>Express</span>
+                            <span>MongoDB</span>
+                            <span>NodeMailer</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="img/" class="project-link demo-link-4"><i class="fas fa-link"></i> Live Demo</a>
+                            <a href="https://github.com/SantoshRed8/MediBook" class="project-link github-link"
+                                data-has-source="true"><i class="fab fa-github"></i>
+                                GitHub</a>
+                            <a href="https://medibook-by-santosh.netlify.app/login" class="project-link" target="_blank"><i
+                                    class="fas fa-external-link-alt"></i>Visit</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="web">
+                    <div class="project-img">
+                        <img src="img/project-tour.png" alt="Project 5">
+                        <div class="project-overlay">
+                            <div class="project-category">Web Development</div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3 class="project-title">Virtual-Campus-Tour-DSU</h3>
+                        <p class="project-desc">Created a 3D virtual campus tour using Three.js and Panolens.js. Includes panoramic scenes, interactive hotspots, and background music.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>ThreeJS</span>
+                            <span>PanolensJS</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="img/" class="project-link demo-link-5"><i class="fas fa-link"></i> Live Demo</a>
+                            <a href="https://github.com/SantoshRed8/Virtual-Campus-Tour---DSU" class="project-link github-link" data-has-source="true"><i
+                                    class="fab fa-github"></i>
+                                GitHub</a>
+                            <a href="https://santoshred8.github.io/Virtual-Campus-Tour---DSU/" class="project-link" target="_blank"><i
+                                    class="fas fa-external-link-alt"></i>Visit</a>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="project-card" data-category="portfolio">
                     <div class="project-img">
-                        <img src="img/project-my-portfolio.png" alt="Project 2">
+                        <img src="img/project-my-portfolio.png" alt="Project 6">
                         <div class="project-overlay">
                             <div class="project-category">Web Development</div>
                             <div class="project-category">Portfolio</div>
@@ -453,7 +523,7 @@
                         </div>
                         <div class="project-links">
                             <a href="#" class="project-link demo-link-mine" data-has-source="false"><i class="fas fa-link"></i> Live Demo</a>
-                            <a href="#" class="project-link github-link" data-has-source="false"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="https://github.com/SantoshRed8/MyPortfolio" class="project-link github-link" data-has-source="true"><i class="fab fa-github"></i> GitHub</a>
                             <a href="https://santoshred8.github.io/MyPortfolio/" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i>Visit</a>
                         </div>
                     </div>
