updated to SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santosh Reddy - Web Developer Portfolio</title>
+    
+    <!-- Title -->
+    <title>Mandati Santosh | Frontend Developer Portfolio</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="I am Mandati Santosh, a full-stack developer skilled in HTML, CSS, JavaScript, React, NodeJS, Express and MongoDB. Explore my portfolio, projects, and skills.">
+    <meta name="keywords" content="Mandati Santosh, Santosh Reddy, Frontend Developer,full-stack Web Developer, Web Developer, Portfolio, HTML, CSS, JavaScript, React">
+    <meta name="author" content="Mandati Santosh">
+
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp Preview) -->
+    <meta property="og:title" content="Mandati Santosh | full-stack Developer Portfolio">
+    <meta property="og:description" content="Explore the portfolio of Mandati Santosh - full-stack Developer skilled in modern web technologies.">
+    <meta property="og:image" content="img/resume.png">
+    <meta property="og:url" content="https://santoshred8.github.io/MyPortfolio/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mandati Santosh | full-stack Developer Portfolio">
+    <meta name="twitter:description" content="Explore the portfolio of Mandati Santosh - full-stack Developer skilled in HTML, CSS, JavaScript, and React.">
+    <meta name="twitter:image" content="img/resume.png">
+
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mandati Santosh",
+      "url": "https://santoshred8.github.io/MyPortfolio/",
+      "sameAs": [
+        "https://github.com/santoshred8",
+        "https://www.linkedin.com/in/mandati-santosh/"
+      ],
+      "jobTitle": "Frontend Developer"
+    }
+    </script>
+
     <link rel="shortcut icon" href="img/resume.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
