--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Beau Rivage' rel='stylesheet'>
+    <meta name="google-site-verification" content="A_nU2E9_NkRNx-LLzuJ7JaOs-FtBJvg3teGXG6hjCak" />
 </head>
 
 <body>
