--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         "https://github.com/santoshred8",
         "https://www.linkedin.com/in/mandati-santosh/"
       ],
-      "jobTitle": "Frontend Developer"
+      "jobTitle": "Full-Stack Web Developer"
     }
     </script>
 
