--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                             <a href="https://github.com/SantoshRed8/MediBook" class="project-link github-link"
                                 data-has-source="true"><i class="fab fa-github"></i>
                                 GitHub</a>
-                            <a href="https://medibook-by-santosh.netlify.app/login" class="project-link"
+                            <a href="https://medibook-by-santosh.netlify.app" class="project-link"
                                 target="_blank"><i class="fas fa-external-link-alt"></i>Visit</a>
                         </div>
                     </div>
