--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                     <div class="buttons">
                         <a href="#contact" class="btn hire-me">Hire Me</a>
-                        <a href="img/Mandati_Santosh_Resume.pdf" download class="btn download-cv">Download CV</a>
+                        <a href="img/My_Digital_Resume.pdf" download class="btn download-cv">Download CV</a>
                     </div>
                 </div>
 
